Lab4 changes